[package]
name = "rustin"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.23.1"
proc-macro2 = { version = "1.0.105", features = ["span-locations"] }
syn = { version = "2.0.114", features = ["full", "visit", "parsing", "extra-traits"] }
walkdir = "2.5.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
indexmap = "2.7"
quote = "1.0"
